Add new functions

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,10 +4,15 @@
   background: rgba(255, 255, 255, 0.3);
 }
 
-.site-layout .site-layout-background {
+.site-layout .site-layout-background {  
   background: #fff;
 }
 
+.content-header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* .App {
   text-align: center;
